[package]
name = "akpull-cl"
version = "0.1.0"
edition = "2021"
authors = [ "dthusian" ]
description = "The stupidest use for OpenCL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.18", features = ["derive"] }
ocl = "0.19.4"
anyhow = "1.0.62"